# toml-test-matrix

./: .gitignore  README.md  index.html  new-parser.zsh  run
scripts/: Cargo.toml  c++-toml++-perf.cpp  c++-toml11-encoder.cpp  c++-toml11-perf.cpp  c-tomlc99-perf.c  cs-tomlyn-decoder.cs  cs-tomlyn-encoder.cs  cs-tomlyn-perf.cs  dart-toml.dart-perf.dart  fortran-toml-f-perf.f90  go-go-toml.go  gotoml-test-encoder.go  js-iarna-toml-decode  js-iarna-toml-encode  js-iarna-toml-perf  js-smol-toml-perf.js  js-toml-eslint-parser-perf.js  js-toml-j-decode  js-toml-j-encode  js-toml-j-perf  julia-TOML-decode.jl  julia-TOML-perf.jl  python-toml-perf  python-tomli-decoder  python-tomli-encoder  python-tomli-perf  python-tomlkit-decoder  python-tomlkit-encoder  python-tomlkit-perf  python-tomllib-decoder  python-tomllib-perf  ruby-perfect_toml-perf  ruby-toml-rb-decoder  ruby-toml-rb-encoder  ruby-toml-rb-perf  ruby-tomlrb-decoder  ruby-tomlrb-perf
scripts/rust-basic-toml/: Cargo.toml
scripts/rust-basic-toml-perf/: Cargo.toml
scripts/rust-basic-toml-perf/src/: main.rs
scripts/rust-basic-toml/src/: decoder.rs  encoder.rs
scripts/rust-boml/: Cargo.toml
scripts/rust-boml-perf/: Cargo.toml
scripts/rust-boml-perf/src/: main.rs
scripts/rust-boml/src/: decoder.rs
scripts/rust-taplo/: Cargo.toml
scripts/rust-taplo-perf/: Cargo.toml
scripts/rust-taplo-perf/src/: main.rs
scripts/rust-taplo/src/: decoder.rs  encoder.rs
scripts/rust-toml/: Cargo.toml
scripts/rust-toml-perf/: Cargo.toml
scripts/rust-toml_edit/: Cargo.toml
scripts/rust-toml_edit-perf/: Cargo.toml
(+83 files in other folders)
