[workspace]
members = ["rust-*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
basic-toml = "0.1.4"
serde_json = "1.0.107"
toml = "0.8.2"
toml-test = "0.3.6"
toml-test-harness = "0.4.5"
toml_edit = "0.20.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
