[workspace]
members = ["rust-*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
basic-toml = "0.1.4"
serde_json = "1.0.107"
taplo = { version = "0.12.1", features = ["serde"] }
toml = "0.8.4"
toml-test = "1.0.0"
toml-test-harness = "0.4.8"
toml_edit = "0.20.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
